# Molecular_Generator

./: LICENSE  README.md
Lepton_&_Atomic_Masses/: Atomtable.csv  predict_atoms.py  predict_atoms_curve_fit.py  predict_leptons.py  predict_leptons_curve_fit.py
Molecule_Generator/: Molecule_Verification_Commands_Canonical.txt  chem_100k.csv  molecule_fieldtest.py  molecule_sql_verify.py  molecules.csv  predict_molecules.py
Muon_Mass_Ratio/: Cargo.toml  canonical_commands.txt  csr_e_0.910_s_m1p052e3_i600_pin-run.json  csr_e_0.910_s_m1p05e3_i1200_pinned-run.json
Pubchem/: README.md  check_pubchem_exists.py  check_pubchem_exists_stream.py  monitor_pubchem_db.py  recheck_from_gz_using_db_mask.py  tag_invalids.py  validate_pubchem_against_rules.py
