[package]
name = "hb_spectrum"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nalgebra = "0.32"
num-complex = "0.4"
rand = "0.8"
rayon = "1.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.15"
ndarray-npy = "0.8"

[[bin]]
name = "hb_spectrum_flux"
path = "src/bin/hb_spectrum_flux.rs"